--- a/_modules/barotropy/properties/core_calculations.html
+++ b/_modules/barotropy/properties/core_calculations.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>barotropy.properties.core_calculations &#8212; barotropy v0.1.1 documentation</title>
+    <title>barotropy.properties.core_calculations &#8212; barotropy v0.2.0 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="../../../_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="../../../_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="../../../_static/documentation_options.js?v=6f89b0bb"></script>
+    <script src="../../../_static/documentation_options.js?v=0a6a6ad3"></script>
     <script src="../../../_static/doctools.js?v=9a2dae69"></script>
     <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">barotropy v0.1.1 documentation</p>
+    <p class="title logo__title">barotropy v0.2.0 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -1650,7 +1650,7 @@ document.write(`
     <span class="n">rho</span> <span class="o">=</span> <span class="mi">1</span> <span class="o">/</span> <span class="p">(</span><span class="n">y_1</span> <span class="o">/</span> <span class="n">props_1</span><span class="p">[</span><span class="s1">&#39;rho&#39;</span><span class="p">]</span> <span class="o">+</span> <span class="n">y_2</span> <span class="o">/</span> <span class="n">props_2</span><span class="p">[</span><span class="s1">&#39;rho&#39;</span><span class="p">])</span>
     <span class="n">vol_1</span> <span class="o">=</span> <span class="n">y_1</span> <span class="o">*</span> <span class="n">rho</span><span class="o">/</span><span class="n">props_1</span><span class="p">[</span><span class="s1">&#39;rhomass&#39;</span><span class="p">]</span>
     <span class="n">vol_2</span> <span class="o">=</span> <span class="n">y_2</span> <span class="o">*</span> <span class="n">rho</span><span class="o">/</span><span class="n">props_2</span><span class="p">[</span><span class="s1">&#39;rhomass&#39;</span><span class="p">]</span>
-    <span class="n">quality_mass</span> <span class="o">=</span> <span class="n">y_1</span> <span class="k">if</span> <span class="n">props_1</span><span class="p">[</span><span class="s1">&#39;rho&#39;</span><span class="p">]</span> <span class="o">&lt;</span> <span class="n">props_2</span><span class="p">[</span><span class="s1">&#39;rho&#39;</span><span class="p">]</span> <span class="k">else</span> <span class="n">vol_2</span>
+    <span class="n">quality_mass</span> <span class="o">=</span> <span class="n">y_1</span> <span class="k">if</span> <span class="n">props_1</span><span class="p">[</span><span class="s1">&#39;rho&#39;</span><span class="p">]</span> <span class="o">&lt;</span> <span class="n">props_2</span><span class="p">[</span><span class="s1">&#39;rho&#39;</span><span class="p">]</span> <span class="k">else</span> <span class="n">y_2</span>
     <span class="n">quality_volume</span> <span class="o">=</span> <span class="n">vol_1</span> <span class="k">if</span> <span class="n">props_1</span><span class="p">[</span><span class="s1">&#39;rho&#39;</span><span class="p">]</span> <span class="o">&lt;</span> <span class="n">props_2</span><span class="p">[</span><span class="s1">&#39;rho&#39;</span><span class="p">]</span> <span class="k">else</span> <span class="n">vol_2</span>
     
     <span class="c1"># Isothermal compressibility</span>
